[gd_scene load_steps=3 format=3 uid="uid://d2bljxr5rp7gd"]

[ext_resource type="Script" uid="uid://dehjydnf3e4hm" path="res://addons/Populous/Base/Editor/populous_tool.gd" id="1_did74"]
[ext_resource type="Script" uid="uid://dhan2lmfl5wq4" path="res://addons/Populous/Base/ResourcePicker/populous_resource_picker.gd" id="2_k42f2"]

[node name="Window" type="Window"]

[node name="PopulousTool" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_did74")

[node name="Label" type="Label" parent="PopulousTool"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0.42, 0.884, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Populous"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="PopulousTool"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="DisabledState" type="Label" parent="PopulousTool"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Make sure a Populous Container is in the scene and selected"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PopulousMenu" type="VBoxContainer" parent="PopulousTool"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PopulousSettings" type="VBoxContainer" parent="PopulousTool/PopulousMenu"]
layout_mode = 2

[node name="Label" type="Label" parent="PopulousTool/PopulousMenu/PopulousSettings"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Main"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator4" type="HSeparator" parent="PopulousTool/PopulousMenu/PopulousSettings"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PopulousTool/PopulousMenu/PopulousSettings"]
layout_mode = 2

[node name="Populous Resource" type="RichTextLabel" parent="PopulousTool/PopulousMenu/PopulousSettings/VBoxContainer"]
layout_mode = 2
text = "Populous Resource"
fit_content = true

[node name="Details" type="RichTextLabel" parent="PopulousTool/PopulousMenu/PopulousSettings/VBoxContainer"]
layout_mode = 2
text = "Please input the Populous Resource which you want to use to populate"
fit_content = true

[node name="PopulousResourcePicker" type="EditorResourcePicker" parent="PopulousTool/PopulousMenu/PopulousSettings/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
base_type = "PopulousResource"
script = ExtResource("2_k42f2")
metadata/_custom_type_script = ExtResource("2_k42f2")

[node name="HSeparator2" type="HSeparator" parent="PopulousTool/PopulousMenu"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="PopulousGenerate" type="VBoxContainer" parent="PopulousTool/PopulousMenu"]
layout_mode = 2

[node name="GeneratePopulous" type="Button" parent="PopulousTool/PopulousMenu/PopulousGenerate"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Generate Populous"

[connection signal="pressed" from="PopulousTool/PopulousMenu/PopulousGenerate/GeneratePopulous" to="PopulousTool" method="_on_generate_populous_pressed"]
